# voice_command_ws

./: .gitignore  Readme.md
src/voice_cmd_messages/: CMakeLists.txt  package.xml
src/voice_cmd_messages/action/: VoiceInterpreter.action
src/voice_command/: CMakeLists.txt  CMakeLists_backup  components.xml  package.xml
src/voice_command/src/: Readme.md  speech_to_text.cpp  text_to_speech.cpp  voice_interpreter.cpp
