<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voice_command</name>
  <version>0.0.0</version>
  <description>Voice command interface for STT, TTS, and MoveIt arm control.</description>
  <maintainer email="dexterm@todo.todo">dexterm</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>ament_index_cpp</depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>

  <depend>voice_cmd_messages</depend>

  <build_depend>libportaudio2</build_depend>
  <exec_depend>libportaudio2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>